--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         // ==========================================
         //  COLOQUE SEU ID AQUI EMBAIXO
         // ==========================================
-        const DISCORD_ID = "SEU_ID_DO_DISCORD_AQUI"; 
+        const DISCORD_ID = "1306661332128501802"; 
         
         async function fetchLanyard() {
             try {
