--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="username">
             <span id="username-text">User</span>
-            <span class="pronouns">she/her</span>
+            <span class="pronouns">⚠️ alerta de especialista</span>
             <span>♥</span>
         </div>
         <div class="bio">be kind and take care</div>
@@ -186,7 +186,7 @@
             <a href="#" class="btn"><i class="fas fa-coffee"></i> ko-fi</a>
         </div>
 
-        <img src="https://media.tenor.com/images/a74d28d57551066d744d03823758364e/tenor.gif" class="decoration-img">
+        <img src="https://tenor.com/view/neymar-gif-25482750" class="decoration-img">
 
         <div class="discord-card">
             <img id="mini-pfp" src="" class="discord-mini-avatar">
