--- a/index.html
+++ b/index.html
@@ -127,3 +127,55 @@
         <div class="links">
             <a href="#" class="btn"><i class="fab fa-youtube"></i> Youtube</a>
             <a href="#" class="btn"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="#" class="btn"><i class="fab fa-steam"></i> Steam</a>
+        </div>
+
+        <img src="https://media.tenor.com/AvkZ8t_a52AAAAAC/neymar.gif" class="decoration-gif" alt="Neymar GIF">
+
+    </div>
+
+    <script>
+        // ==========================================
+        //  COLOQUE SEU ID AQUI EMBAIXO
+        // ==========================================
+        const USER_ID = "SEU_ID_AQUI"; 
+
+        async function updateProfile() {
+            try {
+                const response = await fetch(`https://api.lanyard.rest/v1/users/${USER_ID}`);
+                const json = await response.json();
+
+                if (!json.success) { return; }
+
+                const data = json.data;
+                const user = data.discord_user;
+
+                // Foto e Nome
+                const avatarUrl = `https://cdn.discordapp.com/avatars/${USER_ID}/${user.avatar}.png?size=512`;
+                document.getElementById('pfp').src = avatarUrl;
+                document.getElementById('favicon').href = avatarUrl;
+                document.getElementById('username').innerText = user.username;
+
+                // Status
+                const statusColors = { online: "#3ba55c", idle: "#faa61a", dnd: "#ed4245", offline: "#747f8d" };
+                document.getElementById('status').style.backgroundColor = statusColors[data.discord_status] || statusColors.offline;
+
+                // Banner
+                const bannerDiv = document.getElementById('banner');
+                if (user.banner) {
+                    const ext = user.banner.startsWith("a_") ? "gif" : "png";
+                    const bannerUrl = `https://cdn.discordapp.com/banners/${USER_ID}/${user.banner}.${ext}?size=1024`;
+                    bannerDiv.style.backgroundImage = `url(${bannerUrl})`;
+                } else {
+                    bannerDiv.style.backgroundImage = "none";
+                    bannerDiv.style.backgroundColor = user.banner_color || "#333";
+                }
+
+            } catch (error) { console.error("Erro API"); }
+        }
+
+        updateProfile();
+        setInterval(updateProfile, 5000);
+    </script>
+</body>
+</html>
